@@ -1,13 +1,20 @@
-import java.util.Arrays;
+import java.util.ArrayList;
 import java.util.List;
 import java.util.function.Predicate;
-import java.util.stream.Collectors;
 
 public class Bai1 {
     public static void main(String[] args) {
-        List<String> strings = Arrays.asList("Java", "", "Lambda", "Stream", "", "Functional");
-        Predicate<String> isNotEmpty = s -> !s.isEmpty();
-        List<String> filteredStrings = strings.stream().filter(isNotEmpty).collect(Collectors.toList());
-        System.out.println(filteredStrings);
+        List<String> strings = List.of("Java", "", "Lambda", "Stream", "", "Functional");
+        List<String> newStrings = new ArrayList<>();
+
+        Predicate<String> nonEmptyPredicate = s -> !s.isEmpty();
+
+        for (String str : strings ) {
+            if (nonEmptyPredicate.test(str)) {
+                newStrings.add(str);
+            }
+        }
+
+        System.out.println(newStrings);
     }
 }
